--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <h1>Hello World!</h1>
 
+<ol>
+  <li><a routerLink="/">Home</a></li>
+  <li><a routerLink="/page1">Page 1</a></li>
+  <li><a [routerLink]="['/page2']">Page 2</a></li>
+</ol>
+
 <router-outlet></router-outlet>
