--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <ul class="hidden-xs">
         <li><a id="offcanvas-toggler" href="#" class="menu-link menu-link-slide"><span><em></em></span></a></li>
       </ul>
-      <h2 class="header-title">Dashboard</h2>
+      <h2 class="header-title">{{ ViewBag['title'] }}</h2>
       <ul class="pull-right">
         <li><a id="header-search" href="#" class="ripple"><em class="ion-ios-search-strong"></em></a></li>
         <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle has-badge ripple"><em class="ion-person"></em><sup class="badge bg-danger">3</sup></a>
