--- a/src/app/form1/form1.component.html
+++ b/src/app/form1/form1.component.html
@@ -1,23 +1,35 @@
 <section>
   <div class="container-fluid">
     <h5 class="mt0">Classic form controls and custom variants</h5>
-    <p class="mb-lg">Standard Bootstrap form and input controls with customized UI variations</p>
+    <pre>data = {{ data | json }}
+form.value     = {{ form.value | json }}
+form.valid     = {{ form.valid | json }}
+form.invalid   = {{ form.invalid | json }}
+form.pristine  = {{ form.pristine | json }}
+form.dirty     = {{ form.dirty | json }}
+form.touched   = {{ form.touched | json }}
+form.untouched = {{ form.untouched | json }}</pre>
     <div class="card">
       <div class="card-body">
-        <form method="get" action="/" class="form-horizontal">
+        <form #form="ngForm" (ngSubmit)="doSubmit(form)" class="form-horizontal">
           <fieldset>
             <div class="form-group">
-              <label class="col-sm-2 control-label">Rounded Corners</label>
+              <label class="col-sm-2 control-label">
+                標題
+              </label>
               <div class="col-sm-10">
-                <input type="text" class="form-control rounded">
+                <input name="title" [(ngModel)]="data.title" #tTitle="ngModel" type="text" class="form-control rounded">
               </div>
             </div>
           </fieldset>
           <fieldset>
             <div class="form-group">
-              <label class="col-sm-2 control-label">With help</label>
+              <label class="col-sm-2 control-label">
+                副標
+              </label>
               <div class="col-sm-10">
-                <input type="text" class="form-control"><span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+                <input name="subtitle" [(ngModel)]="data.subtitle" #tSubtitle="ngModel" type="text" class="form-control">
+                <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
               </div>
             </div>
           </fieldset>
