--- a/src/app/form1/form1.component.html
+++ b/src/app/form1/form1.component.html
@@ -13,22 +13,32 @@ form.untouched = {{ form.untouched | json }}</pre>
       <div class="card-body">
         <form #form="ngForm" (ngSubmit)="doSubmit(form)" class="form-horizontal">
           <fieldset>
-            <div class="form-group">
+            <div class="form-group" [class.has-error]="tTitle.dirty && tTitle.touched && tTitle.invalid">
               <label class="col-sm-2 control-label">
                 標題
               </label>
               <div class="col-sm-10">
-                <input name="title" [(ngModel)]="data.title" #tTitle="ngModel" type="text" class="form-control rounded">
+                <input name="title" required minlength="3" [(ngModel)]="data.title" #tTitle="ngModel" type="text" class="form-control rounded">
+                <span class="help-block" *ngIf="tTitle.dirty && tTitle.touched && tTitle['errors']?.required">請輸入標題</span>
+                <span class="help-block" *ngIf="tTitle.dirty && tTitle.touched && tTitle['errors']?.minlength">您輸入的標題長度不足，請至少輸入 3 個字元</span>
+                <pre>tTitle.value     = {{ tTitle.value | json }}
+tTitle.valid     = {{ tTitle.valid | json }}
+tTitle.invalid   = {{ tTitle.invalid | json }}
+tTitle.pristine  = {{ tTitle.pristine | json }}
+tTitle.dirty     = {{ tTitle.dirty | json }}
+tTitle.touched   = {{ tTitle.touched | json }}
+tTitle.untouched = {{ tTitle.untouched | json }}
+tTitle.errors    = {{ tTitle.errors | json }}</pre>
               </div>
             </div>
           </fieldset>
           <fieldset>
-            <div class="form-group">
+            <div class="form-group" [class.has-error]="tSubtitle.dirty && tSubtitle.invalid">
               <label class="col-sm-2 control-label">
                 副標
               </label>
               <div class="col-sm-10">
-                <input name="subtitle" [(ngModel)]="data.subtitle" #tSubtitle="ngModel" type="text" class="form-control">
+                <input name="subtitle" required [(ngModel)]="data.subtitle" #tSubtitle="ngModel" type="text" class="form-control">
                 <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
               </div>
             </div>
