--- a/src/app/form1/form1.component.html
+++ b/src/app/form1/form1.component.html
@@ -13,7 +13,7 @@ form.untouched = {{ form.untouched | json }}</pre>
       <div class="card-body">
         <form #form="ngForm" (ngSubmit)="doSubmit(form)" class="form-horizontal">
           <fieldset>
-            <div class="form-group" [class.has-error]="tTitle.dirty && tTitle.touched && tTitle.invalid">
+            <div class="form-group" [class.has-error]="form.submitted && tTitle.invalid">
               <label class="col-sm-2 control-label">
                 標題
               </label>
@@ -32,7 +32,7 @@ tTitle.errors    = {{ tTitle.errors | json }}</pre>
               </div>
             </div>
           </fieldset>
-          <fieldset>
+          <fieldset ngModelGroup="group1" #tGroup1="ngModelGroup">
             <div class="form-group" [class.has-error]="tSubtitle.dirty && tSubtitle.invalid">
               <label class="col-sm-2 control-label">
                 副標
@@ -43,6 +43,7 @@ tTitle.errors    = {{ tTitle.errors | json }}</pre>
               </div>
             </div>
           </fieldset>
+          <input type="submit" value="送出表單">
           <fieldset>
             <div class="form-group">
               <label for="input-id-1" class="col-sm-2 control-label">Label focus</label>
