29 練習 Reactive Forms 開發

--- a/src/app/form2/form2.component.html
+++ b/src/app/form2/form2.component.html
@@ -1,26 +1,51 @@
 <section>
   <div class="container-fluid">
     <h5 class="mt0">Classic form controls and custom variants</h5>
-    <p class="mb-lg">Standard Bootstrap form and input controls with customized UI variations</p>
+    <pre>
+form.value     = {{ form.value | json }}
+form.valid     = {{ form.valid | json }}
+form.invalid   = {{ form.invalid | json }}
+form.pristine  = {{ form.pristine | json }}
+form.dirty     = {{ form.dirty | json }}
+form.touched   = {{ form.touched | json }}
+form.untouched = {{ form.untouched | json }}</pre>
     <div class="card">
       <div class="card-body">
-        <form method="get" action="/" class="form-horizontal">
+        <form [formGroup]="form" #tForm="ngForm" class="form-horizontal">
           <fieldset>
-            <div class="form-group">
-              <label class="col-sm-2 control-label">Rounded Corners</label>
+            <div class="form-group" [class.has-error]="tForm.submitted && form.get('title').invalid">
+              <label class="col-sm-2 control-label">
+                標題
+              </label>
               <div class="col-sm-10">
-                <input type="text" class="form-control rounded">
+                <input type="text" class="form-control rounded" formControlName="title">
+                <span class="help-block" *ngIf="form.get('title').dirty && form.get('title').touched && form.get('title')['errors']?.required">請輸入標題</span>
+                <span class="help-block" *ngIf="form.get('title').dirty && form.get('title').touched && form.get('title')['errors']?.minlength">您輸入的標題長度不足，請至少輸入 3 個字元</span>
+                <pre>form.get('title').value     = {{ form.get('title').value | json }}
+form.get('title').valid     = {{ form.get('title').valid | json }}
+form.get('title').invalid   = {{ form.get('title').invalid | json }}
+form.get('title').pristine  = {{ form.get('title').pristine | json }}
+form.get('title').dirty     = {{ form.get('title').dirty | json }}
+form.get('title').touched   = {{ form.get('title').touched | json }}
+form.get('title').untouched = {{ form.get('title').untouched | json }}
+form.get('title').errors    = {{ form.get('title').errors | json }}</pre>
               </div>
             </div>
           </fieldset>
           <fieldset>
             <div class="form-group">
-              <label class="col-sm-2 control-label">With help</label>
+              <label class="col-sm-2 control-label">
+                副標
+              </label>
               <div class="col-sm-10">
-                <input type="text" class="form-control"><span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+                <input type="text" class="form-control" formControlName="subtitle">
+                <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
               </div>
             </div>
           </fieldset>
+
+          <input type="submit" value="送出表單">
+
           <fieldset>
             <div class="form-group">
               <label for="input-id-1" class="col-sm-2 control-label">Label focus</label>
