示範 Sub-FormGroup 寫法

--- a/src/app/form2/form2.component.html
+++ b/src/app/form2/form2.component.html
@@ -32,7 +32,7 @@ form.get('title').errors    = {{ form.get('title').errors | json }}</pre>
               </div>
             </div>
           </fieldset>
-          <fieldset>
+          <fieldset formGroupName="group1">
             <div class="form-group">
               <label class="col-sm-2 control-label">
                 副標
