--- a/src/app/form2/form2.component.html
+++ b/src/app/form2/form2.component.html
@@ -44,16 +44,24 @@ form.get('title').errors    = {{ form.get('title').errors | json }}</pre>
             </div>
           </fieldset>
 
+          <div formArrayName="addresses">
+
+            <fieldset *ngFor="let item of form.get('addresses')['controls']; let idx=index">
+              <div class="form-group">
+                <label for="input-id-1" class="col-sm-2 control-label">
+                  地址 {{ idx+1 }}
+                </label>
+                <div class="col-sm-10">
+                  <input [formControlName]="idx" id="input-id-1" type="text" class="form-control" placeholder="請輸入地址">
+                </div>
+              </div>
+            </fieldset>
+
+          </div>
+          <button (click)="addNewAddress()">新增地址</button>
+
           <input type="submit" value="送出表單">
 
-          <fieldset>
-            <div class="form-group">
-              <label for="input-id-1" class="col-sm-2 control-label">Label focus</label>
-              <div class="col-sm-10">
-                <input id="input-id-1" type="text" class="form-control">
-              </div>
-            </div>
-          </fieldset>
           <fieldset>
             <div class="form-group">
               <label class="col-sm-2 control-label">Password</label>
