--- a/src/app/form2/form2.component.html
+++ b/src/app/form2/form2.component.html
@@ -47,12 +47,13 @@ form.get('title').errors    = {{ form.get('title').errors | json }}</pre>
           <div formArrayName="addresses">
 
             <fieldset *ngFor="let item of form.get('addresses')['controls']; let idx=index">
-              <div class="form-group">
+              <div class="form-group" [class.has-error]="item.invalid">
                 <label for="input-id-1" class="col-sm-2 control-label">
                   地址 {{ idx+1 }}
                 </label>
                 <div class="col-sm-10">
                   <input [formControlName]="idx" id="input-id-1" type="text" class="form-control" placeholder="請輸入地址">
+                  <pre>item.errors = {{ item.errors | json }}</pre>
                 </div>
               </div>
             </fieldset>
